<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.home.HomeFragment">
  <Space
    android:id="@+id/space"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/totalRaceTimeTIL" />
  <Space
    android:id="@+id/space3"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/averageLapTimeTIL" />
  <Space
    android:id="@+id/space4"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/totalLapsTIL" />
  <Space
    android:id="@+id/space5"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/fuelPerLapTIL" />
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/totalRaceTimeTIL"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:boxBackgroundMode="filled"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/transparent"
      android:digits="0123456789:"
      android:hint="@string/totalRaceTime"
      android:inputType="number" />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/averageLapTimeTIL"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/space">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/transparent"
      android:digits="0123456789:."
      android:hint="@string/averageLapTime"
      android:inputType="number" />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/totalLapsTIL"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/space3">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/transparent"
      android:digits="0123456789"
      android:hint="@string/totalLaps"
      android:inputType="number" />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/fuelPerLapTIL"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/space4">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/transparent"
      android:digits="0123456789.l"
      android:hint="@string/fuelPerLap"
      android:inputType="number" />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/fuelTankCapacityTIL"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/space5">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/transparent"
      android:digits="0123456789l"
      android:hint="@string/fuelTankCapacity"
      android:inputType="number" />
  </com.google.android.material.textfield.TextInputLayout><![CDATA[


  />

]]>
</androidx.constraintlayout.widget.ConstraintLayout>